Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137553

[REG 6.8.2 -> 6.8.3] Significant performance regression in SVG loading with PySide6 6.8.3

XMLWordPrintable

    • 9e5bed958 (dev), 90a533164 (6.10), ea44b50c6 (6.9), ee5c57442 (tqtc/lts-6.8)

      The runtime to open complex SVG files has significantly increased since PySide6 version 6.8.3.

      Using the attached code and file, initializing a QPixmap now takes 25–30 seconds on my computer, whereas it took less than 0.5 seconds with PySide6 version 6.8.2.1. We also tried using QSvgWidget but observed the same results. Unfortunately, our application is not really usable with such poor performance, and it would be great if someone could investigate this issue.

      Qt 6.9.1 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 10.3.1 20210422 (Red Hat 10.3.1-1)) 
      
      Initializing QPixmap took 11822 ms
      
      Qt 6.5.9 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 10.3.1 20210422 (Red Hat 10.3.1-1)) 
      
      Initializing QPixmap took 160 ms
      

        1. example.svg
          2.53 MB
          Joana Rodriguez
        2. main.py
          0.4 kB
          Joana Rodriguez
        3. qtbug137553.zip
          260 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-137553
        # Subject Branch Project Status CR V

            rlohning Robert Löhning
            joana Joana Rodriguez
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes